update carousel start

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,9 +1,17 @@
-.slider {
-  width: 100%;
-
+:host {
   display: flex;
-  flex-direction: column;
   flex-grow: 1;
+}
+
+.main-wrapper {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  min-width: 100vw;
 
   &__container {
     display: grid;
