--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,42 +1,31 @@
-<div class="main-wrapper">
-  <div class="slider" style="background: green">
-    <div class="slider__container">
-      <div class="slider__text">
-        <h1>H1 Lorem ipsum dolor sit amet</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-          dolores quibusdam eum doloremque quia ducimus repellat. Dignissimos
-          iure illum esse porro nesciunt libero sed. Laboriosam possimus neque
-          sint? Porro, nobis.
-        </p>
-        <button>Lorem ipsum</button>
-      </div>
-      <div class="slider__images">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quas,
-        accusantium reiciendis enim mollitia nesciunt omnis ut vero molestias
-        accusamus quasi aspernatur necessitatibus, cumque ipsam distinctio
-        doloribus voluptatem perspiciatis ab?
-      </div>
-    </div>
-  </div>
-  <div class="slider" style="background: red">
-    <div class="slider__container">
-      <div class="slider__text">
-        <h1>H1 Lorem ipsum dolor sit amet</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-          dolores quibusdam eum doloremque quia ducimus repellat. Dignissimos
-          iure illum esse porro nesciunt libero sed. Laboriosam possimus neque
-          sint? Porro, nobis.
-        </p>
-        <button>Lorem ipsum</button>
-      </div>
-      <div class="slider__images">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quas,
-        accusantium reiciendis enim mollitia nesciunt omnis ut vero molestias
-        accusamus quasi aspernatur necessitatibus, cumque ipsam distinctio
-        doloribus voluptatem perspiciatis ab?
+<p-carousel [value]="slides" [numVisible]="1" [numScroll]="1">
+  <ng-template let-slide pTemplate="item">
+    <div class="{{ slide.background }} slide">
+      <div class="container slide--container">
+        <div class="slide__txt">
+          <h1>{{ slide.title }}</h1>
+          <p>{{ slide.text }}</p>
+          <div class="slide__buttons">
+            <a
+              href="{{ slide.githubUrl }}"
+              target="_blank"
+              title="{{ slide.title }} on GitHub"
+              class="github"
+            >
+              Project on GitHub
+            </a>
+            <a
+              href="{{ slide.hostedUrl }}"
+              target="_blank"
+              title="{{ slide.title }} hosted"
+              >Project hosted</a
+            >
+          </div>
+        </div>
+        <div class="slide__img">
+          <img src="{{ slide.imgUrl }}" alt="" />
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  </ng-template>
+</p-carousel>
