--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,18 @@
 <div class="container header__container">
-  <div class="logo">clouds | <strong>HTML/CSS</strong></div>
+  <div class="logo">
+    claudio | <strong>front-end dev</strong> & <strong>ui designer</strong>
+  </div>
   <nav>
     <ul class="nav">
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
+      <li>
+        <a href="assets/Claudio-DevFront-end.pdf" target="_blank">Resume</a>
+      </li>
+
+      <li>
+        <a href="https://www.linkedin.com/in/claudiodesigner/" target="_blank"
+          >LinkedIn</a
+        >
+      </li>
     </ul>
   </nav>
 </div>
