--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <p-carousel [value]="slides" [numVisible]="1" [numScroll]="1">
   <ng-template let-slide pTemplate="item">
-    <div class="{{ slide.background }} slide">
+    <div class="{{ slide.projectClass }} slide">
       <div class="container slide--container">
         <div class="slide__txt">
           <h1>{{ slide.title }}</h1>
@@ -18,6 +18,7 @@
               href="{{ slide.hostedUrl }}"
               target="_blank"
               title="{{ slide.title }} hosted"
+              class="hosted"
               >Project hosted</a
             >
           </div>
