--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,16 +3,6 @@
   flex-grow: 1;
 }
 
-.mb-bg {
-  background: rgb(38, 64, 139);
-  background: linear-gradient(
-    90deg,
-    rgba(38, 64, 139, 1) 0%,
-    rgba(38, 64, 139, 1) 35%,
-    rgba(70, 187, 0, 1) 100%
-  );
-}
-
 .slide {
   height: 100%;
   display: flex;
@@ -27,6 +17,12 @@
 
   &__img img {
     max-width: 552px;
+    transition: all 450ms;
+
+    &:hover {
+      transform: scale(1.4);
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 1rem 3rem;
+    }
   }
 }
 
@@ -40,6 +36,11 @@
   gap: 1.5rem;
   display: flex;
   flex-direction: column;
+
+  h1 {
+    margin-top: 2rem;
+    font-size: 2.5rem;
+  }
 
   h1,
   a {
@@ -56,17 +57,81 @@
   gap: 0.75rem;
 
   a {
-    padding: 0.75rem 1rem;
-    background-color: red;
-    border: 1px solid red;
+    font-size: 1.125rem;
+    padding: 1rem 2rem;
     border-radius: 0.25rem;
     display: inline-block;
     text-decoration: none;
     color: white;
+    transition: all 300ms;
+
+    &:hover {
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 0.5rem 1rem;
+      transform: translate(0, -6px);
+    }
+
+    &:active {
+      transition: all 100ms;
+      box-shadow: none;
+      transform: translate(0, 0);
+      filter: brightness(0.9);
+    }
   }
 
   .github {
     background: transparent;
-    border-color: white;
+    border: 1px solid white;
+  }
+}
+
+.my-balance {
+  background: rgb(38, 64, 139);
+  background: linear-gradient(
+    130deg,
+    rgba(38, 64, 139, 1) 0%,
+    rgba(38, 64, 139, 1) 35%,
+    rgba(70, 187, 0, 1) 100%
+  );
+
+  .slide__buttons {
+    .hosted {
+      background-color: #46bb00;
+      border: 1px solid #5be40c;
+    }
+  }
+}
+
+.clipz {
+  background: rgb(42, 48, 68);
+  background: linear-gradient(
+    130deg,
+    rgba(42, 48, 68, 1) 0%,
+    rgba(63, 74, 110, 1) 50%,
+    rgba(131, 140, 241, 1) 100%
+  );
+
+  .slide__buttons {
+    .hosted {
+      background-color: #757dd1;
+      border: 1px solid #838cf1;
+    }
+  }
+}
+
+.movie-db {
+  background: rgb(23, 18, 6);
+  background: linear-gradient(
+    130deg,
+    rgba(23, 18, 6, 1) 0%,
+    rgba(70, 57, 18, 1) 50%,
+    rgba(131, 104, 20, 1) 100%
+  );
+
+  .slide__buttons {
+    .hosted {
+      background-color: hsl(47, 99%, 48%);
+      border: 1px solid hsl(47, 100%, 80%);
+      color: black;
+    }
   }
 }
