--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,10 +18,11 @@
   &__img img {
     max-width: 552px;
     transition: all 450ms;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 1rem 2rem;
 
     &:hover {
-      transform: scale(1.4);
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 1rem 3rem;
+      transform: scale(1.1);
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2rem 4rem;
     }
   }
 }
@@ -105,15 +106,26 @@
   background: rgb(42, 48, 68);
   background: linear-gradient(
     130deg,
-    rgba(42, 48, 68, 1) 0%,
-    rgba(63, 74, 110, 1) 50%,
-    rgba(131, 140, 241, 1) 100%
+    hsl(223, 96%, 96%) 0%,
+
+    hsl(223, 96%, 64%) 100%
   );
 
+  h1,
+  p,
+  a {
+    color: hsl(234, 89%, 24%);
+  }
+
   .slide__buttons {
+    a {
+      border-color: #283044;
+    }
+
     .hosted {
-      background-color: #757dd1;
-      border: 1px solid #838cf1;
+      background-color: hsl(344, 72%, 43%);
+      border: 1px solid hsl(344, 54%, 64%);
+      color: white;
     }
   }
 }
@@ -122,16 +134,60 @@
   background: rgb(23, 18, 6);
   background: linear-gradient(
     130deg,
-    rgba(23, 18, 6, 1) 0%,
-    rgba(70, 57, 18, 1) 50%,
-    rgba(131, 104, 20, 1) 100%
+    hsl(47, 100%, 2%) 0%,
+    hsl(47, 64%, 20%) 50%,
+    hsl(47, 100%, 40%) 100%
   );
 
   .slide__buttons {
     .hosted {
-      background-color: hsl(47, 99%, 48%);
-      border: 1px solid hsl(47, 100%, 80%);
+      background-color: hsl(193, 96%, 72%);
+      border: 1px solid hsl(193, 96%, 88%);
       color: black;
     }
+  }
+}
+
+.my-balance,
+.clipz,
+.movie-db {
+  background-size: 160% 160%;
+
+  -webkit-animation: AnimationName 5s ease infinite;
+  -moz-animation: AnimationName 5s ease infinite;
+  animation: AnimationName 5s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 9% 0%;
+  }
+  50% {
+    background-position: 92% 100%;
+  }
+  100% {
+    background-position: 9% 0%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 9% 0%;
+  }
+  50% {
+    background-position: 92% 100%;
+  }
+  100% {
+    background-position: 9% 0%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 9% 0%;
+  }
+  50% {
+    background-position: 92% 100%;
+  }
+  100% {
+    background-position: 9% 0%;
   }
 }
