--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <p>
   Built with Angular
-  <svg height="24px" viewBox="0 0 512 512" width="24px">
+  <svg viewBox="0 0 512 512">
     <g id="_x32_1-angular">
       <g>
         <path
