--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,18 @@ body {
     align-items: center;
   }
 }
+footer {
+  p {
+    text-align: center;
+    margin: 0.375rem 0 0.5rem 0;
+  }
+
+  svg {
+    height: 1.5rem;
+    width: 1.5rem;
+    margin-bottom: -0.375rem;
+  }
+}
 
 // Carousel Home start
 
@@ -105,7 +117,7 @@ body {
 
 @media (max-width: 640px) {
   html {
-    font-size: 62.5%;
+    font-size: 75%;
   }
 
   body {
@@ -129,6 +141,10 @@ body {
     display: flex;
   }
 
+  .header__container {
+    font-size: 0.8333333333rem;
+  }
+
   .p-element .p-carousel,
   .p-element .p-carousel-content,
   .p-element .p-carousel-container,
@@ -145,7 +161,33 @@ body {
   .p-element {
     display: flex;
   }
+
   .p-carousel-items-content {
     display: flex;
+  }
+
+  .p-element .p-carousel .p-carousel-indicators .p-carousel-indicator {
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    button {
+      width: 2rem;
+      height: 2rem;
+    }
+  }
+
+  .p-element .p-carousel .p-carousel-content .p-carousel-prev,
+  .p-element .p-carousel .p-carousel-content .p-carousel-next {
+    bottom: 6px;
+  }
+
+  footer {
+    p {
+      font-size: 0.83333333rem;
+    }
   }
 }
