--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -96,8 +96,8 @@
 
   .slide__buttons {
     .hosted {
-      background: linear-gradient(180deg, #46bb00 0%, hsl(98, 100%, 20%) 100%);
-      border: 1px solid #5be40c;
+      background: linear-gradient(180deg, #46bb00 0%, hsl(98, 100%, 22%) 100%);
+      border: 1px solid hsl(98, 90%, 36%);
     }
   }
 }
