--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -89,8 +89,8 @@
   background: rgb(38, 64, 139);
   background: linear-gradient(
     130deg,
-    rgba(38, 64, 139, 1) 0%,
-    rgba(38, 64, 139, 1) 35%,
+    #1a2c60 0%,
+    #1a2c60 33%,
     rgba(70, 187, 0, 1) 100%
   );
 
@@ -104,7 +104,12 @@
 
 .clipz {
   background: rgb(42, 48, 68);
-  background: linear-gradient(130deg, #737ff5 0%, hsl(223, 40%, 20%) 100%);
+  background: linear-gradient(
+    130deg,
+    hsl(224, 39%, 14%) 0%,
+    hsl(224, 39%, 24%) 33%,
+    hsl(234, 87%, 72%) 100%
+  );
 
   .slide__buttons {
     .hosted {
@@ -119,9 +124,9 @@
   background: rgb(23, 18, 6);
   background: linear-gradient(
     130deg,
-    hsl(47, 100%, 2%) 0%,
-    hsl(47, 64%, 20%) 50%,
-    hsl(47, 100%, 40%) 100%
+    hsl(47, 100%, 4%) 0%,
+    hsl(47, 64%, 12%) 33%,
+    hsl(47, 100%, 32%) 100%
   );
 
   .slide__buttons {
