--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,14 +12,14 @@
               title="{{ slide.title }} on GitHub"
               class="github"
             >
-              Project on GitHub
+              Link do GitHub
             </a>
             <a
               href="{{ slide.hostedUrl }}"
               target="_blank"
               title="{{ slide.title }} hosted"
               class="hosted"
-              >Project hosted</a
+              >Projeto hospedado</a
             >
           </div>
         </div>
