--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,17 @@
 <div class="container header__container">
-  <div class="logo">
-    claudio | <strong>front-end dev</strong> & <strong>ui designer</strong>
-  </div>
+  <div class="logo">claudio | <strong>front-end dev</strong></div>
   <nav>
     <ul class="nav">
       <li>
-        <a href="assets/Claudio-DevFront-end.pdf" target="_blank">Resume</a>
+        <a
+          href="assets/claudio-frontend-developer-curriculo.pdf"
+          target="_blank"
+          >Currículo</a
+        >
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/claudiodesigner/" target="_blank"
+        <a href="https://www.linkedin.com/in/claudio-front/" target="_blank"
           >LinkedIn</a
         >
       </li>
