--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,15 +30,19 @@ body {
     align-items: center;
   }
 }
+
 footer {
   p {
     text-align: center;
-    margin: 0.375rem 0 0.5rem 0;
+    font-size: 0.875rem;
+    line-height: 1;
+    margin: 0;
+    padding: 0.75rem;
   }
 
   svg {
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 1.25rem;
+    width: 1.25rem;
     margin-bottom: -0.375rem;
   }
 }
